# hackduke-2026

./: .gitignore  LICENSE  README.md
cropsight/: README.md
cropsight/.claude/agents/: celery-task.md  langgraph-agent.md
cropsight/.claude/commands/: build-endpoint.md
cropsight/backend/: Dockerfile  pyproject.toml  schema.sql
cropsight/backend/app/: config.py  synthetic_pipeline.py
cropsight/backend/app/agent/: state.py
cropsight/backend/app/agent/nodes/: action_generator.py  context_builder.py  zone_classifier.py
cropsight/backend/app/models/: field.py
cropsight/backend/app/routers/: fields.py  zones.py
cropsight/backend/pipeline/: celery_app.py  db_writer.py  field_detector.py  heatmap_generator.py  indices.py  tasks.py
cropsight/frontend/: package.json  tsconfig.tsbuildinfo
cropsight/frontend/src/app/: layout.tsx  page.tsx
cropsight/frontend/src/app/fields/: page.tsx
cropsight/frontend/src/app/onboarding/: page.tsx
cropsight/frontend/src/app/panels/: ZoneDetailPanel.tsx
cropsight/frontend/src/app/sidebar/: CommunityImpactPanel.tsx  RecommendationCard.tsx
cropsight/frontend/src/app/ui/: StatCard.tsx  ZoneSparklines.tsx
cropsight/frontend/src/hooks/: useTodos.ts
cropsight/frontend/src/lib/: api.ts  colors.ts  mapbox.ts
cropsight/frontend/src/types/: api.ts
harvest/: .env.example  .gitignore  Makefile
harvest/.claude/commands/: build-agent-node.md
harvest/backend/: pyproject.toml
harvest/backend/alembic/: env.py
harvest/backend/alembic/versions/: 0001_initial.py
harvest/backend/app/: redis.py  synthetic_pipeline.py
harvest/backend/app/agent/: checkpointer.py
harvest/backend/app/models/: field.py
harvest/backend/app/routers/: __init__.py
harvest/backend/pipeline/: celery_app.py  indices.py  stac_sentinel.py
harvest/frontend/: CLAUDE.md  package-lock.json  package.json  tsconfig.tsbuildinfo
harvest/frontend/src/app/: page.tsx  providers.tsx
harvest/frontend/src/hooks/: useAgentTrace.ts  useRecommendations.ts
harvest/frontend/src/lib/: api.ts
reharvestai/: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
reharvestai/.claude/agents/: api-router.md
reharvestai/.claude/commands/: stub-all-endpoints.md
reharvestai/.claude/skills/fastapi-patterns/: SKILL.md
reharvestai/.claude/skills/langgraph-patterns/: SKILL.md
reharvestai/.claude/skills/open-meteo-api/: SKILL.md
reharvestai/backend/: Dockerfile  alembic.ini  pyproject.toml  schema.sql
reharvestai/backend/alembic/: env.py
reharvestai/backend/alembic/versions/: 0001_initial_schema.py
reharvestai/backend/app/: config.py  database.py  main.py  redis.py  synthetic_pipeline.py
reharvestai/backend/app/agent/: graph.py  state.py
reharvestai/backend/app/agent/nodes/: action_generator.py  context_builder.py  output_formatter.py  risk_evaluator.py  zone_classifier.py
reharvestai/backend/app/models/: __init__.py  field.py
reharvestai/backend/app/routers/: agent.py  fields.py  recommendations.py  todos.py  weather.py  zones.py
reharvestai/backend/pipeline/: celery_app.py  db_writer.py  indices.py  raster.py  segmentation.py  sentinel.py  tasks.py
reharvestai/backend/pipeline/fixtures/: mock_zones.json
reharvestai/frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
reharvestai/frontend/src/app/: globals.css  layout.tsx  page.tsx
reharvestai/frontend/src/hooks/: useRecommendations.ts  useZones.ts
reharvestai/frontend/src/lib/: api.ts  mapbox.ts
reharvestai/frontend/src/types/: api.ts
(+33 files in other folders)
