[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reharvestai-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    # Cache
    "redis[asyncio]>=5.2.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # AI / Agent
    "langgraph>=0.2.55",
    "anthropic>=0.40.0",
    # Config
    "pydantic-settings>=2.6.0",
    # HTTP client (Open-Meteo, sentinelsat)
    "httpx>=0.28.0",
    # Geospatial / Satellite
    "numpy>=2.2.0",
    "rasterio>=1.4.0",
    "shapely>=2.0.6",
    "sentinelsat>=1.2.1",
    # SAM2: pip install git+https://github.com/facebookresearch/sam2
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "pipeline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
