[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reharvestai-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    # Config / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "geojson-pydantic>=1.0",
    # Database
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",     # sync driver for alembic
    # Task queue
    "celery[redis]>=5.3",
    "redis>=5.0",
    # Raster / geospatial
    "rasterio>=1.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyproj>=3.6",
    "shapely>=2.0",
    # Satellite imagery
    "requests>=2.31",
    "pystac-client>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "pipeline"]

[project.optional-dependencies]
# Install on Linux workers that have the SAM3 checkpoint available
ml = ["sam3"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
