[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reharvestai-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    # Config / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    # Database
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    # Cache / task queue
    "redis[asyncio]>=5.0",
    "celery[redis]>=5.3",
    # AI / Agent (Person 2)
    "anthropic>=0.40.0",
    "langgraph>=0.2.55",
    "langchain-core>=0.3.0",
    # HTTP client (Open-Meteo)
    "httpx>=0.27",
    # Raster / geospatial (Person 3)
    "rasterio>=1.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyproj>=3.6",
    "shapely>=2.0",
    "pystac-client>=0.7",
    "requests>=2.31",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "pipeline"]

[project.optional-dependencies]
# Install on Linux workers that have the SAM3 checkpoint available
ml = ["sam3"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
